@@ -52,6 +52,7 @@ export(makeFilterWrapper)
 export(makeFixedHoldoutInstance)
 export(makeLearner)
 export(makeMeasure)
+export(makeOversampleWrapper)
 export(makePreprocWrapper)
 export(makeRegrTask)
 export(makeResampleDesc)
@@ -65,6 +66,7 @@ export(makeTuneControlIrace)
 export(makeTuneControlOptim)
 export(makeTuneControlRandom)
 export(makeTuneWrapper)
+export(makeUndersampleWrapper)
 export(makeWrappedModel)
 export(mcc)
 export(measures)
@@ -74,6 +76,7 @@ export(mmce)
 export(mse)
 export(multiclass.auc)
 export(npv)
+export(oversample)
 export(performance)
 export(ppv)
 export(predictLearner)
@@ -176,6 +179,8 @@ S3method(makeWrappedModel,BaggingWrapper)
 S3method(makeWrappedModel,BaseWrapper)
 S3method(makeWrappedModel,Learner)
 S3method(makeWrappedModel,OptWrapper)
+S3method(oversample,ClassifTask)
+S3method(oversample,data.frame)
 S3method(predictLearner,BaggingWrapper)
 S3method(predictLearner,BaseWrapper)
 S3method(predictLearner,classif.ada)
@@ -279,6 +284,7 @@ S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.svm)
 S3method(trainLearner,FilterWrapper)
+S3method(trainLearner,OversampleWrapper)
 S3method(trainLearner,PreprocWrapper)
 S3method(trainLearner,regr.earth)
 S3method(trainLearner,regr.fnn)
@@ -298,3 +304,6 @@ S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
 S3method(trainLearner,TuneWrapper)
+S3method(trainLearner,UndersampleWrapper)
+S3method(undersample,ClassifTask)
+S3method(undersample,data.frame)
